--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "inventory_system",
   "version": "1.0.0",
-  "main": "dist/app.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
+    "dev": "ts-node-dev   --respawn --transpile-only src/index.ts",
     "build": "tsc",
-    "start": "node dist/app.js"
+    "start": "node dist/index.js"
   },
   "keywords": [],
   "author": "",
