--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,8 +9,7 @@
     "resolveJsonModule": true,
     "strict": false,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "types": ["node", "express"]
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src"],
   "exclude": ["node_modules"]
