--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
     "resolveJsonModule": true,
     "strict": false,
     "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "types": ["node", "express"]
   },
   "include": ["src"],
   "exclude": ["node_modules"]
