--- a/package.json
+++ b/package.json
@@ -3,28 +3,23 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev   --respawn --transpile-only src/index.ts",
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^17.2.3",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
-    "express-validator": "^7.3.0",
-    "mysql2": "^3.15.3",
-    "zod": "^4.1.12"
+    "express-validator": "^7.2.1",
+    "mysql2": "^3.14.4",
+    "zod": "^4.1.5",
+    "@types/node": "^24.3.0",
+    "@types/express": "^5.0.17",
+    "@types/cors": "^2.8.19",
+    "@types/express-validator": "^7.0.2"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/dotenv": "^6.1.1",
-    "@types/express": "^5.0.5",
-    "@types/express-validator": "^3.0.2",
-    "@types/node": "^24.10.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2"
   }
